samples/_failures_safe/1761448032_d4398d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7d6a71c.c: In function ‘main’:
./samples/SAFE/__tmp_d7d6a71c.c:133:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  133 |     int choice
      |     ^~~
./samples/SAFE/__tmp_d7d6a71c.c:133:5: error: expected declaration or statement at end of input
